Changes to products page

--- a/wookiebook.html
+++ b/wookiebook.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Wookiebook</title>
+    <link rel='icon' href='GESS.ico' type='image/x-icon'/>
   </head>
   <body>
     <img src="images/yodameme.jpg" alt="Here once stood a Yoda meme">
