Het staat op de juiste plaats. Thx Robbe

--- a/products.html
+++ b/products.html
@@ -26,18 +26,23 @@
     <!-- Custom styles for this template -->
     <link href="styles/product.css" rel="stylesheet">
   </head>
-  <body">
-    <nav class="nav nav-masthead justify-content-center">
-      <a class="nav-link active" href="#">Home</a>
-      <a class="nav-link" href="#">Products</a>
-      <a class="nav-link" href="#">Contact</a>
-    </nav>
+  <body>
+  <header class="masthead mb-auto">
+    <div class="inner">
+      <h3 class="masthead-brand text-light" style="text-align:center;">Galactic Empire Sith Shop</h3>
+      <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link active" href="products.html">Products</a>
+        <a class="nav-link" href="#">Contact</a>
+      </nav>
+    </div>
+  </head>
 
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4 font-weight-normal">Welcome to our store</h1>
-    <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
-    <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+    <h1 class="display-4 font-weight-normal text-light">Welcome to our store</h1>
+    <p class="lead font-weight-normal text-light">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
+    <button type="button" class="btn btn-outline-light">Light</button>
   </div>
 </div>
 
