--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
       <h3 class="masthead-brand">Galactic Empire Sith Shop</h3>
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link active" href="#">Home</a>
-        <a class="nav-link" href="products.html">Products</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="products.html">Producten</a>
       </nav>
     </div>
   </header>
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Join the dark side,</br> we have cookies...</h1>
-    <p class="lead">The Galactic Empire Sith Shop is THE place to buy everything you need to rule the galaxy in name of the Galactic Empire. </p>
+    <h1 class="cover-heading" style="margin-top:40px;">Join the dark side,</br> we have cookies...</h1>
+    <p class="lead">The Galactic Empire Sith Shop is DE plaats waar je alles dat je nodig hebt om te heersen over het universum in naam van The Galactic Empire. </p>
     <p class="lead">
       <a href="products.html" class="btn btn-lg btn-secondary">Start shopping</a>
     </p>
@@ -48,7 +47,7 @@
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
-      <p>Follow us on <a href="wookiebook.html">Wookiebook</a></p>
+      <p>Volg ons op <a href="wookiebook.html">Wookiebook</a></p>
     </div>
   </footer>
 </div>
