--- a/dashboard.html
+++ b/dashboard.html
@@ -15,6 +15,7 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="index.html">Home</a>
           <a class="nav-link" href="products.html">Products</a>
+          <a class="nav-link" href="sign_in.php">Login</a>
         </nav>
       </div>
     </header>
