--- a/products.html
+++ b/products.html
@@ -33,6 +33,7 @@
       <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link active" href="products.html">Products</a>
+        <a class="nav-link" href="sign_in.php">Login</a>
       </nav>
     </div>
   </header>
